--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,7 +20,8 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Portal de Segurança Pública. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Portal de Segurança Compartilhada
+                . Todos os direitos reservados.</p>
         </div>
     </div>
 </footer>
