--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <div class="container header-content">
         <div class="logo-container">
-            <img src="logotipo.png" alt="Logotipo Portal de Segurança Pública" class="logo">
-            <h1 class="site-title">Portal de Segurança Pública</h1>
+            <img src="favicon.ico" alt="Logotipo Portal de Segurança Compartilhada" class="logo">
+            <h1 class="site-title">Portal de Segurança Compartilhada</h1>
         </div>
         <div class="header-buttons">
             <button class="btn btn-login">Logout</button>
@@ -14,9 +14,9 @@
 <nav>
     <div class="container">
         <ul>
-            <li><a href="#inicio">Início</a></li>
-            <li><a href="#alertas">Alertas</a></li>
-            <li><a href="#mapa">Mapa de Ocorrências</a></li>
+            <li><a routerLink="/" routerLinkActive="router-link-active">Início</a></li>
+            <li><a routerLink="/dicas" routerLinkActive="router-link-active">Alertas</a></li>
+            <li><a routerLink="/map" routerLinkActive="router-link-active" >Mapa de Ocorrências</a></li>
             <li><a href="#comunicacao">Fale com Autoridades</a></li>
             <li><a href="#recursos">Recursos</a></li>
         </ul>
