--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,5 +1,6 @@
+
 <div class="hero">
-    <h1>Bem-vindo ao Portal de Segurança Pública</h1>
+    <h1>Bem-vindo ao Portal de Segurança Compartilhada</h1>
     <p>Sua segurança em um clique. Explore o mapa e fique informado sobre os crimes e unidades policiais em sua região.</p>
     <button >Explorar o Mapa</button>
   </div>
@@ -8,7 +9,7 @@
     <article class="feature">
       <h2>Mapa de Crimes</h2>
       <p>Visualize os crimes reportados em sua cidade, além de aplicar filtros para os diferentes meses do ano.</p>
-      <a href="#map" class="explore-link">Veja o mapa de crimes</a>
+      <a routerLink="/map" routerLinkActive="router-link-active"  class="explore-link">Veja o mapa de crimes</a>
     </article>
   
     <article class="feature">
@@ -20,7 +21,7 @@
     <article class="feature">
       <h2>Alertas de Segurança</h2>
       <p>Receba alertas em tempo real sobre áreas de risco e operações policiais.</p>
-      <a href="#security-alerts" class="explore-link">Ver Alertas</a>
+      <a routerLink="/dicas" routerLinkActive="router-link-active" class="explore-link">Ver Alertas</a>
     </article>
   
     <article class="feature">
@@ -41,4 +42,5 @@
       <a href="#useful-links" class="explore-link">Ver Links</a>
     </article>
   </section>
+  
   
