--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -56,7 +56,7 @@
     <div>
       <div class="control-row">
         <div class="control">
-          <label for="last-name">CPF</label>
+          <label for="CPF">CPF</label>
           <input
             type="text"
             id="last-name"
@@ -65,7 +65,7 @@
           />
         </div>
         <div class="control">
-          <label for="last-name">Data de Nascimento</label>
+          <label for="date">Data de Nascimento</label>
           <input
             type="date"
             id="date"
