--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
             <h1 class="site-title">Portal de Segurança Compartilhada</h1>
         </div>
         <div class="header-buttons">
-            <button class="btn btn-login">Logout</button>
-            <button class="btn btn-register">Editar</button>
+            <button class="btn btn-login"><a routerLink="/login" routerLinkActive="router-link-active">Login</a></button>
+            <button class="btn btn-register"><a routerLink="/cadastro" routerLinkActive="router-link-active">Cadastrar</a></button>
         </div>
     </div>
 </header>
