--- a/src/app/form/form-login/form-login.component.html
+++ b/src/app/form/form-login/form-login.component.html
@@ -40,7 +40,7 @@
       </div>
       <a href="#" class="forgot-password">Esqueci minha senha</a>
     </form>
-    <a href="#" class="create-login">Ainda não tem cadastro? Cadastre-se</a>
+    <a routerLink="/cadastro" routerLinkActive="router-link-active"  class="create-login">Ainda não tem cadastro? Cadastre-se</a>
   </div>
 </div> 
 
