--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,8 +1,8 @@
 
 <div class="hero">
-    <h1>Bem-vindo ao Portal de Segurança Compartilhada</h1>
+    <h1>Bem-vindo ao Portal de Vigilância Compartilhada</h1>
     <p>Sua segurança em um clique. Explore o mapa e fique informado sobre os crimes e unidades policiais em sua região.</p>
-    <button >Explorar o Mapa</button>
+    <button routerLink="/map" routerLinkActive="router-link-active"  class="explore-link" >Explorar o Mapa</button>
   </div>
   
   <section class="features-section">
@@ -19,15 +19,9 @@
     </article>
   
     <article class="feature">
-      <h2>Alertas de Segurança</h2>
-      <p>Receba alertas em tempo real sobre áreas de risco e operações policiais.</p>
+      <h2>Alertas</h2>
+      <p>Acompanhe os alertas referentes à segurança pública e as dicas de defesa civil.</p>
       <a routerLink="/dicas" routerLinkActive="router-link-active" class="explore-link">Ver Alertas</a>
-    </article>
-  
-    <article class="feature">
-      <h2>Dicas de Defesa Civil</h2>
-      <p>Saiba como se proteger em casos de emergência, como enchentes e deslizamentos.</p>
-      <a href="#civil-defense-tips" class="explore-link">Ver Dicas</a>
     </article>
   
     <article class="feature">
