--- a/src/app/crime-map/crime-map.component.html
+++ b/src/app/crime-map/crime-map.component.html
@@ -2,23 +2,13 @@
 <section id="mapa" class="card">
     <h2>Mapa de Ocorrências</h2>
     <div class="form-grid">
-        <select>
+        <select (change)="onCitySelect($event)">
+            
             <option value=""disabled selected>Selecione a Cidade</option>
-            @for(city of cities; track city.id){
-                <option value="">{{city.name}}</option>
-            }
+            <option *ngFor="let city of cities" [value]="city.id">{{city.name}}</option>
             
         </select>
-        <select>
-            <option value="" disabled selected>Escolha um mês</option>
-            @for(month of months; track month.id){
-                <option value="">{{month.name}}</option>
-            }
-            
-        </select>
-        <select>
-            <option value="">Selecione o ano</option>
-        </select>
+       
     </div>
     <div id="map" style="height: 400px;"></div>
 
