--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,20 @@
 <header>
     <div class="container header-content">
         <div class="logo-container">
-            <img src="favicon.ico" alt="Logotipo Portal de Segurança Compartilhada" class="logo">
-            <h1 class="site-title">Portal de Segurança Compartilhada</h1>
+            <img [src]="logoPath" alt="Logotipo Portal de Segurança Compartilhada" class="logo"> 
+            <h1 class="site-title">Portal de Vigilância Compartilhada</h1>
         </div>
         <div class="header-buttons">
-            <button class="btn btn-login"><a routerLink="/login" routerLinkActive="router-link-active">Login</a></button>
-            <button class="btn btn-register"><a routerLink="/cadastro" routerLinkActive="router-link-active">Cadastrar</a></button>
+            @if(!profile?.name){
+                <button class="btn btn-login" (click)="login()">Login</button>
+                <button class="btn btn-register"><a routerLink="/cadastro" routerLinkActive="router-link-active">Cadastrar</a></button>
+
+            }@else {
+                <button class="btn btn-logout" (click)="logout()">Logout</button>
+                <button class="btn btn-register"><a routerLink="/cadastro" routerLinkActive="router-link-active">Editar</a></button>      
+            }
+            
+            
         </div>
     </div>
 </header>
